k8s/geffws-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: geffws
  name: geffws-deployment
  namespace: geffws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geffws
  template:
    metadata:
      labels:
        app: geffws
    spec:
      containers:
      - name: geffws
        command:
        - ./geffws
        image: docker.io/geffws/hello-k8s-world:v0.4.6
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 60Mi
            cpu: 50m
          requests:
            memory: 20Mi
            cpu: 25m
        ports:
        - containerPort: 8083
          name: https
          protocol: TCP
