k8s/geffws-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: geffws
  name: geffws-service
spec:
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8083
  selector:
    app: geffws
